--- a/site/templates/base.tmpl
+++ b/site/templates/base.tmpl
@@ -11,6 +11,14 @@ ${template_hooks['extra_head']()}
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800|Open+Sans:400,700,700i" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 </head>
 <body class="${' '.join(pagekind)} path-${'-'.join([p for p in permalink.replace('/'+lang+'/', '', 1).split('/') if p] or ['frontpage'])}">
 <a href="#content" class="sr-only sr-only-focusable">${messages("Skip to main content")}</a>
