--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -35,11 +35,8 @@ body {
 }
 
 [class*="title"] {
-  font-size: 48px;
-  color: #000;
   position: relative;
   display: inline-block;
-  /* margin-bottom: 40px; */
   margin-top: 40px;
 }
 
@@ -792,6 +789,14 @@ article {
   min-height: 40vh;
 }
 
+.post-text h1 {
+  font-style: var(--font-secondary);
+  font-weight: bold;
+  font-size: 2.5rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 .post-text h2 {
   font-weight: bold;
   font-style: italic;
@@ -800,9 +805,39 @@ article {
   margin-bottom: 1rem;
 }
 
+.post-text h3 {
+  font-weight: bold;
+  font-style: italic;
+  font-size: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 .post-text p {
   font-size: 1rem;
   margin-bottom: 1rem;
+}
+
+article.post-micro {
+  font-family: var(--font-secondary);
+}
+article.post-micro p {
+  font-family: var(--font-primary);
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+article.post-micro h3 {
+  font-weight: bold;
+  font-style: italic;
+  font-size: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+aside.postpromonav {
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .footer-logo {
@@ -845,8 +880,8 @@ article {
   letter-spacing: 4px;
 }
 
-.dropdown-menu {
-  border: 1px solid var(--black);
+.dropdown.show > .dropdown-menu.show {
+  background-color: rgba(255, 241, 231, 0.9);
 }
 
 .dropdown-menu > .dropdown-item {
