--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1269,3 +1269,39 @@ p {
   background: var(--black);
   transition: 200ms all ease-out;
 }
+
+.schedule-row {
+  display: flex;
+  margin-bottom: 1rem;
+}
+.circle {
+  height: 36px;
+  width: 36px;
+  border: 6px solid black;
+  opacity: 0.25;
+  border-radius: 100%;
+}
+
+.line {
+  height: calc(100% - 36px);
+  border-left: 5px solid black;
+  opacity: 0.25;
+  margin-top: 10px;
+  margin-left: 15px;
+}
+
+.schedule-right {
+  margin-left: 2rem;
+  text-align: left;
+}
+
+.schedule-header {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
+  display: inline-block;
+  font-size: 2rem;
+  line-height: 1;
+  text-transform: uppercase;
+}
