--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1305,3 +1305,28 @@ p {
   line-height: 1;
   text-transform: uppercase;
 }
+
+.features {
+  display: flex;
+  width: 100%;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  justify-content: space-around;
+}
+
+.features > .item > img {
+  margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 150px;
+}
+
+.features > .item > h3 {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+.features > .item {
+  width: 300px;
+}
