--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1351,8 +1351,8 @@ p {
 .circle {
   height: 36px;
   width: 36px;
-  border: 6px solid black;
-  opacity: 0.25;
+  border: 6px solid #a9173f;
+  opacity: 0.75;
   border-radius: 100%;
 }
 
