add initial schedule to get people interested (#192)
* add initial schedule to get people interested

* add some links and ensure they are underlined

* try to fix css

* fix css

* fix css styles

* fix bullets

* make the menu structure make more sense

* remove speaker who pulled out

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1212,7 +1212,19 @@ header {
 
 a {
   color: var(--red);
+  text-decoration: underline;
 }
+
+.e-content a {
+  color: var(--red);
+  text-decoration: underline;
+}
+
+.e-content ol, .e-content ul {
+    list-style: disc outside none;
+     padding: 40px;
+}
+
 
 a:hover {
   color: var(--red-darker);
