Still*7 trying to add CSS

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -544,8 +544,11 @@ table.schedule td {
   vertical-align: middle;
 }
 
+table.schedule tr:first-child {
+    font-weight: bold;
+}
 table.schedule td:first-child {
-    text-align: right
+    text-align: right;
 }
 
 
