--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -533,14 +533,14 @@ table.schedule {
 table.schedule th {
   border: 2px solid black;
   text-align: center;
-  font-size: medium;
+  font-size: small;
   vertical-align: middle;
 }
 
 table.schedule td {
   border: 2px solid black;
   text-align: center;
-  font-size: medium;
+  font-size: small;
   vertical-align: middle;
 }
 
@@ -569,6 +569,12 @@ table.schedule td:nth-child(5) {
     width: 24%;
 }
 
+td p.first {
+    font-weight: bold;
+}
+td p.last {
+    font-style: italic;
+}
 
 span.blank {
   display: none;
