Trying again*2 to improve table

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -569,6 +569,16 @@ table.schedule td:nth-child(5) {
     width: 24%;
 }
 
+td p.first {
+    font-size: small;
+    font-weight: bold;
+}
+
+td p.last {
+    font-style: italic;
+    font-size: xx-small;
+}
+
 td[colspan]:not([colspan="1"]) p.first {
     font-style: italic;
     font-size: medium;
@@ -579,14 +589,6 @@ td[colspan]:not([colspan="1"]) p.last {
     font-size: medium;
 }
 
-td[colspan="1"]  p.first {
-    font-size: small;
-    font-weight: bold;
-}
-td[colspan="1"]  p.last {
-    font-style: italic;
-    font-size: xx-small;
-}
 
 span.blank {
   display: none;
