Trying again*3 to improve table

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -576,7 +576,7 @@ td p.first {
 
 td p.last {
     font-style: italic;
-    font-size: xx-small;
+    font-size: smaller;
 }
 
 td[colspan]:not([colspan="1"]) p.first {
